--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -419,16 +419,15 @@ or a Fixed-X model: $x_i$, $i=1,\dots,n$ are fixed and laid out on a regular
 lattice in $[0,1]^d$, and $\epsilon_i$, $i=1,\dots,n$ are i.i.d. Whatever you
 prefer.   
 
-Generalize the calculation given in the minimax theory lecture to show that
-there exists a constant $c>0$ (which may depend on $L$) such that for large
-enough $n$,
+Generalize the calculations given in the minimax theory lecture to show that
+there exists a constant $c>0$ (which may depend on $L$) such that
 \[
 \inf_{\hf} \, \sup_{f \in C^k_d(L; [0,1]^d)} \, \E \|f - \hf \|_2^2 \geq
 c n^{-2k/(2k+d)}. 
 \]
 To be clear, here \smash{$\|g\|_2^2 = \int_{[0,1]^d} g(x)^2 \, dx$}. Make sure
 to write the full calculation from start to finish (even detailing the steps
-that may be analogous to those in lecture).  
+that may be analogous to those in lecture).
 \marginpar{\small [7 pts]}
 
 Explain why this certifies that the upper bound given in the last question for
