--- a/lectures/nn_kernels/nn_kernels.tex
+++ b/lectures/nn_kernels/nn_kernels.tex
@@ -598,8 +598,7 @@ constant $L>0$, is
 \gtrsim n^{-2s/(2s+d)},
 \end{equation}
 which generalizes the result we cited earlier for Lipschitz functions in
-\eqref{eq:lipschitz_lbd}. Again, we'll study this in detail in the minimax
-theory lecture. 
+\eqref{eq:lipschitz_lbd}. We'll study this on the homework.
 
 % RJT note: I don't love this, because [0,1]^d is not open and it's easiest to
 % define a Holder space over an open domain (as otherwise what do you mean by 
