--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -1211,7 +1211,7 @@ call $\cH$ an \emph{inner product space}.
 An inner product space $\cH$ is called a \emph{Hilbert space} if it is
 complete. Recall that completeness means that Cauchy sequences converge to  
 limits in the space.\footnote{Concretely, given any sequence $f_n$,
-  $n=1,2,3,\ldots$ in $\cH$ such that for any $\epsilon>0$, we have $\|f_n - 
+  $n=1,2,3,\dots$ in $\cH$ such that for any $\epsilon>0$, we have $\|f_n - 
   f_m\|_\cH < \epsilon$ for large enough $n,m$, it must hold that $\|f_n - 
   f\|_\cH \to 0$ as $n \to \infty$ for some $f \in \cH$.}
 
