Don't need \vee

--- a/lectures/minimax/minimax.tex
+++ b/lectures/minimax/minimax.tex
@@ -178,8 +178,8 @@ more thorough treatment of distances on distributions.
 
 As in the nonparametric regression lectures, for sequences $a_n,b_n$, we will
 write $a_n \lesssim b_n$ to mean $a_n = O(b_n)$, and we use $a_n \asymp b_n$ to
-mean $a_n = O(b_n)$ and $b = O(a_n)$. We also use the abbreviations $a \wedge b
-= \min\{a,b\}$ and $a \vee b = \max\{a,b\}$.  
+mean $a_n = O(b_n)$ and $b = O(a_n)$. We also use the abbreviation $a \wedge b
+= \min\{a,b\}$.
 
 \section{Standard reduction}
 
