--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -253,7 +253,7 @@ In this exercise, we will analyze the risk of wavelet denoising.
   \smash{$\ttheta_{jk}(y)$} is a noisy empirical wavelet coefficient.
 
   We begin with a simple Haar calculation. To recall the Haar basis on $[0,1]$, 
-  first define $\psi(x) = 1\{x \in [0,1/2]\} - 1\{x \in (1/2,1]\}$. Then the
+  first define $\psi(x) = 1\{x \in (0,1/2]\} - 1\{x \in (1/2,1]\}$. Then the
   Haar basis is given by the collection          
   \[
    1, \; \psi_{jk}, \; \text{for $k = 0, \dots, 2^j-1$ and $j = 0,1,2,\dots$},     
