--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -273,7 +273,7 @@ In this exercise, we will analyze the risk of wavelet denoising.
 \item Explain why it is that we can write
   \marginpar{\small [1 pt]}
   \[
-  \E \|f - \hf\|_2^2 = \sum_{j,k} (\theta_{jk}(f) - \ttheta_{jk}(y))^2,
+  \|f - \hf\|_2^2 = \sum_{j,k} (\theta_{jk}(f) - \ttheta_{jk}(y))^2,
   \]
   where the wavelet coefficients of $f$ are 
   \[
