--- a/lectures/minimax/minimax.tex
+++ b/lectures/minimax/minimax.tex
@@ -239,7 +239,7 @@ s = \min_{j \not= k} \, d(\theta_j, \theta_k).
 Given an arbitrary estimator \smash{$\htheta$}, define 
 \begin{equation}
 \label{eq:psi_star}
-\psi^* = \argmin_{j=1,\dots,M} \, d(\theta_j, \htheta).
+\psi^* = \argmin_{j=1,\dots,N} \, d(\theta_j, \htheta).
 \end{equation}
 
 Let's assume that $d$ satisfies a quasi-triangle inequality, of the form 
