--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -24,10 +24,10 @@ Regression splines and smoothing splines are motivated from a different
 perspective than kernels and local polynomials; in the latter case, we started
 off with a special kind of local averaging, and moved our way up to a
 higher-order local models. With regression splines and smoothing splines, we
-build up our estimate globally, from a set of select basis functions. 
+build our estimator globally, from a set of select basis functions. 
 
 (We note that, at a broader level, the latter is often called the
-\emph{synthesis} framework for modeling, where we build up our estimate from a
+\emph{synthesis} framework for modeling, where we build our estimator from a  
 set of atoms---here being basis functions.) 
 
 \subsection{Splines}
