--- a/lectures/nn_kernels/nn_kernels.tex
+++ b/lectures/nn_kernels/nn_kernels.tex
@@ -21,7 +21,7 @@ Given a random pair $(X,Y) \in \R^d \times \R$, recall that the function
  f_0(x) = \E(Y|X=x) 
 \]
 is called the regression function (of $Y$ on $X$). The basic goal in
-nonparametric regression is to construct an estimate \smash{$\hf$} of $f_0$ 
+nonparametric regression is to construct an estimator \smash{$\hf$} of $f_0$  
 without assuming a specific parametric form for $f_0$, and instead only assuming 
 that $f_0$ is smooth in some way.
 
@@ -130,12 +130,14 @@ only care about how close \smash{$\hf$} is to $f_0$.
 Of course, in order for this to ``work'', we need our representation to be
 sufficiently flexible---otherwise we can't guarantee \smash{$\hf$} will be close 
 $f_0$. The gap between our representation and $f_0$ is known as the
-\emph{approximation error}. Sometimes this will be an explicit part of the
-analysis (e.g., with splines) and sometimes it won't (e.g., with kernels). Here
-is a concrete example: for any $f_0 : [0,1] \to \R$ whose second derivative is
-integrable, and evenly-spaced points $t_1,\dots,t_N \in [0,1]$, there exists a
-cubic spline \smash{$\bar{f}$} with knots at $t_1,\dots,t_N$ (to be defined
-precisely in the splines lecture) such that
+\emph{approximation error}. For traditional nonparametric theory (e.g., theory
+for $k$-nearest neighbors and kernel regression), this won't be an explicit part
+of the analysis; but for some advanced results, it will (we'll touch on this in
+a later lecture). Here is a concrete example of an approximation guarantee: for 
+any $f_0 : [0,1] \to \R$ whose second derivative is integrable, and
+evenly-spaced points $t_1,\dots,t_N \in [0,1]$, there is a cubic spline
+\smash{$\bar{f}$} with knots at $t_1,\dots,t_N$ (to be defined precisely in the 
+splines lecture) such that    
 \[
 \|\bar{f} - f_0\|_\infty \leq \frac{c}{N} \bigg[ \int_0^1 [f_0''(x)]^2 \, dx
 \bigg]^{1/2},  
@@ -211,7 +213,7 @@ Note that each $w_i$ is discontinuous as a function of $x$, and therefore so is
 \subsection{Linear smoothers}
 
 The representation \eqref{eq:linear_smoother} also reveals that the $k$-nearest
-neighbors estimate is in a class of estimates we call \emph{linear smoothers}:
+neighbors estimator is in a class of estimators we call \emph{linear smoothers}: 
 these are methods for which \eqref{eq:linear_smoother} holds for some weight
 functions $w_1,\dots,w_n$. To be clear, this means that for fixed $x$ and inputs
 $x_1,\dots,x_n$, the prediction \smash{$\hf(x)$} is a linear function of
